<resources>
    <string name="app_name">Bangkit Story</string>
    <string name="descripsion_app">Get to know Bangkit, see the success stories of people who have joined Bangkit, and write your success story on Bangkit now!</string>
    <string name="start">Start Now!</string>
    <string name="alert_email_error">Invalid Email</string>
    <string name="hint_email">Email</string>
    <string name="alert_email_required">Email required!</string>
    <string name="alert_email_example_com_not_allowed">Email with @example.com domain is not allowed!</string>
    <string name="login">Log In</string>
    <string name="hint_password">Password</string>
    <string name="error_password">Password must be at least 8 characters long!</string>
    <string name="belum_punya_akun">Don\'t have an account?</string>
    <string name="daftar">Sign Up</string>
    <string name="desc_login">Welcome back! Log in with your email and password to Continue</string>
    <string name="login_tiitle">Log In!</string>
    <string name="title_splash">Bangkit Story by Rio Adjie Wiguna</string>
    <string name="register">Register</string>
    <string name="desc_register">Don\'t have an account yet? Sign up now to create your stories!</string>
    <string name="hint_username">Username</string>
    <string name="error_username">Enter a name that fits more than 4 characters!</string>
    <string name="register_btn">Register</string>
    <string name="sudah_punya_akun">Already have an account?</string>
    <string name="masuk">Log In</string>
    <string name="camera">Camera</string>
    <string name="setting">Settings</string>
    <string name="image_photo">Photo</string>
    <string name="desc_story">Story description</string>
    <string name="story_not_found">Oops, we couldn\'t find the data you were looking for…</string>
    <string name="lost_connection">Sorry, check your connection..</string>
    <string name="try_again">Try Again!</string>
    <string name="title_activity_detail_story">Story Detail</string>
    <string name="ganti_bahasa">Change Language</string>
    <string name="my_email">rioadjie100301@@gmail.com</string>
    <string name="hai">Hi,</string>
    <string name="add_photo">Add Photo</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="retry_button">retry</string>
    <string name="todo">TODO</string>
    <string name="empty_upload">Oops, image failed to upload!</string>
    <string name="empty_camera">Oops..failed to show the camera</string>
    <string name="take">Try again to take a picture!</string>
    <string name="my_name">Rio Adjie Wiguna</string>
    <string name="uploads">Upload Stories</string>
    <string name="empty_login">Login Filed</string>
    <string name="succes">Yeayy !</string>
    <string name="nexts">Next</string>
    <string name="registration_success">Registration for the account with %1$s was successful! Please log in and start creating a story!</string>
    <string name="empty_image">Your description does not exist!</string>
    <string name="empty_images">Insert an image file first!</string>
    <string name="granted">Permission request granted</string>
    <string name="denied">Permission request denied</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="log_outs">Log out</string>
    <string name="empty_data">Failed to retrieve data</string>
    <string name="maps">Maps</string>
</resources>
