<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.story.StoryActivity">


<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/red"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_back"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/name"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/uploads"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginEnd="30dp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.appcompat.widget.Toolbar>


<ImageView
    android:id="@+id/img_preview"
    android:layout_width="0dp"
    android:layout_height="300dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="24dp"
    android:contentDescription="@string/add_photo"
    android:src="@drawable/ic_baseline_image_24"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar"
    app:layout_goneMarginStart="7dp" />

<com.rio.finalsubmissionandroidintermediate.custome_view.MyButtonClass
    android:id="@+id/btn_camera"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textAllCaps="false"
    android:text="@string/camera"
    android:layout_marginEnd="7dp"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toStartOf="@id/btn_gallery"
    app:layout_constraintStart_toStartOf="@+id/img_preview"
    app:layout_constraintTop_toBottomOf="@+id/img_preview" />

<com.rio.finalsubmissionandroidintermediate.custome_view.MyButtonClass
    android:id="@+id/btn_gallery"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/gallery"
    android:textAllCaps="false"
    app:layout_constraintBottom_toBottomOf="@+id/btn_camera"
    app:layout_constraintEnd_toEndOf="@+id/img_preview"
    app:layout_constraintStart_toEndOf="@+id/btn_camera"
    app:layout_constraintTop_toTopOf="@+id/btn_camera" />

<EditText
    android:id="@+id/edt_description"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="18dp"
    android:layout_marginBottom="25dp"
    android:gravity="start"
    android:hint="@string/desc_story"
    android:importantForAutofill="no"
    android:inputType="textMultiLine"
    android:padding="14dp"
    android:background="@drawable/shape_rectangel_putih"
    app:layout_constraintBottom_toTopOf="@+id/btn_upload"
    app:layout_constraintEnd_toEndOf="@+id/btn_gallery"
    app:layout_constraintStart_toStartOf="@+id/btn_camera"
    app:layout_constraintTop_toBottomOf="@+id/btn_camera" />

<com.rio.finalsubmissionandroidintermediate.custome_view.MyButtonClass
    android:id="@+id/btn_upload"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:text="@string/upload"
    android:textAllCaps="false"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/edt_description"
    app:layout_constraintStart_toStartOf="@+id/edt_description" />

<ProgressBar
    android:id="@+id/progress_bar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="@+id/btn_upload"
    app:layout_constraintEnd_toEndOf="@+id/btn_upload"
    app:layout_constraintStart_toStartOf="@+id/btn_upload"
    app:layout_constraintTop_toTopOf="@+id/btn_upload" />


</androidx.constraintlayout.widget.ConstraintLayout>