<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.home.DetailActivity">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/red"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_back"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/name_tolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_activity_detail_story"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginEnd="30dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical" />

    </LinearLayout>




</androidx.appcompat.widget.Toolbar>

<ImageView
    android:id="@+id/img_photos"
    android:layout_width="0dp"
    android:layout_height="300dp"
    android:contentDescription="@string/image_photo"
    android:scaleType="centerCrop"
    android:src="@drawable/image_welcome"
    android:transitionName="image"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar" />

<View
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:background="@color/red"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/img_photos" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:transitionName="name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:text="@string/hint_username" />

    <TextView
    android:id="@+id/tv_description"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="14dp"
    android:textSize="14sp"
    android:transitionName="description"
    app:layout_constraintEnd_toEndOf="@+id/tv_name"
    app:layout_constraintStart_toStartOf="@+id/tv_name"
    app:layout_constraintTop_toBottomOf="@+id/tv_name"
    tools:text="@string/desc_story" />

</androidx.constraintlayout.widget.ConstraintLayout>