<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.home.SettingActivity">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/red"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_back"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/name"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginEnd="30dp"
            android:textStyle="bold" />


    </LinearLayout>





</androidx.appcompat.widget.Toolbar>


<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/toolbar"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@+id/toolbar">

    <include
        android:id="@+id/card_image"
        layout="@layout/card_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>


<TextView
    android:id="@+id/tv_logout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:text="@string/log_outs"
    android:layout_marginEnd="30dp"
    android:layout_marginTop="20dp"
    android:textColor="#EDF64C4C"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />




</androidx.constraintlayout.widget.ConstraintLayout>